# RenderingEngine

./: .gitignore  App.cpp  App.h  AssimpTest.cpp  Bindable.cpp  Bindable.h  BindableCodex.h  BlendedPhongPS.cso  BlendedPhongVS.cso  Blender.cpp  Box.cpp  Box.h  CMakeLists.txt  Camera.cpp  Camera.h  ColorBlendPS.cso  ColorBlendVS.cso  ColorBlendVS.hlsl  ColorIndexPS.cso  ColorIndexPS.hlsl  ColorIndexVS.cso  ColorIndexVS.hlsl  Cone.h  ConstantBuffers.h  ConstantBuffersEx.h  Cube.h  CustomWindows.h  Cylinder.cpp  Drawable.cpp  Drawable.h  DrawableBase.h  DxgiInfoManager.cpp  DxgiInfoManager.h  DynamicConstant.cpp  DynamicConstant.h  FrameCommander.h  GDIPlusManager.cpp  Graphics.cpp  Graphics.h  ImguiManager.cpp  (+119 more)
imgui/: imgui_impl_dx11.h  imgui_impl_win32.h
include/: App.h  BlurPack.h  Camera.h  Cube.h  CustomWindows.h  DepthStencil.h  Drawable.h  Graphics.h  ImguiManager.h  InputLayout.h  Keyboard.h  LayoutCodex.h  Material.h  Mesh.h  Mouse.h  PerfLog.h  PointLight.h  RException.h  RMath.h  RUtil.h  RenderTarget.h  Sphere.h  Surface.h  TestCube.h  Testing.h  Vertex.h  Window.h  json.hpp  resource.h
include/Bindables/: Bindable.h  BindableCodex.h  ConstantBuffers.h  ConstantBuffersEx.h  Sampler.h  Stencil.h  Texture.h  TransformCBuf.h
include/Drawable/: Drawable.h
include/Geometry/: IndexedTriangleList.h
include/Model/: Material.h  Mesh.h  Model.h  ModelException.h  ModelWindow.h
include/RenderGraph/: FrameCommander.h  Step.h  TechniqueProbe.h
include/RenderGraph/Passes/: Pass.h  PassInput.h  RenderGraphCompileException.h
include/RenderQueue/: FrameCommander.h  Step.h  Technique.h  TechniqueProbe.h
shaders/pixel/: BlurOutline_PS.hlsl  Blur_PS.hlsl  Negative_PS.hlsl  PhongDiffuseMaskSpecNormal_PS.hlsl  PhongDiffuseNormal_PS.hlsl  PhongDiffuseSpecNormal_PS.hlsl  PhongDiffuseSpec_PS.hlsl  PhongDiffuse_PS.hlsl  PhongSpecNormMask_PS.hlsl  PhongSpec_PS.hlsl  Phong_PS.hlsl  Solid_PS.hlsl
shaders/vertex/: PhongDiffuseNormal_VS.hlsl  PhongNormalMap_VS.hlsl  Phong_VS.hlsl  Solid_VS.hlsl
source/: App.cpp  Camera.cpp  DepthStencil.cpp  DxgiInfoManager.cpp  Graphics.cpp  GraphicsResource.cpp  InputLayout.cpp  LayoutCodex.cpp  PointLight.cpp  RUtil.cpp  RXM.cpp  RenderTarget.cpp  SolidSphere.cpp  TestCube.cpp  Testing.cpp  TexturePreprocessor.cpp  Timer.cpp  Vertex.cpp  WinMain.cpp  WindowsMessageMap.cpp
source/Bindables/: Bindable.cpp  Blender.cpp  IndexBuffer.cpp  PixelShader.cpp  Sampler.cpp  Surface.cpp  Topology.cpp  TransformCBuf.cpp  TransformCBufExtended.cpp
source/Drawable/: Drawable.cpp  SolidSphere.cpp  TestCube.cpp  TestPlane.cpp
source/Model/: Material.cpp  Mesh.cpp  Model.cpp  ModelException.cpp  ModelWindow.cpp  Node.cpp
source/RenderGraph/: FrameCommander.cpp  Pass.cpp  RenderGraph.cpp  Step.cpp  Technique.cpp
source/RenderGraph/Passes/: BindingPass.cpp  FullscreenPass.cpp  Pass.cpp  PassInput.cpp  RenderGraphCompileException.cpp
source/RenderQueue/: Job.cpp  Step.cpp
